--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 80px;
+    height: 55px;
     background-color: #07121F;
     border-top: solid 1px #007e77;
     display: flex;
@@ -12,8 +12,6 @@
 
 .footerText{
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
     padding-right: 20px;
     padding-left: 20px;
     color: white;
