--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -7,10 +7,12 @@
 
 body, html{
     position: relative;
-    height: 100%;
+}
+
+body{
+    height: 100vh;
     background-image: url("../images/backGround.jpg");
     background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
 }
 
