--- a/assets/styles/responsiveness.css
+++ b/assets/styles/responsiveness.css
@@ -22,13 +22,12 @@
     
     #expandMenuButton{
         display: flex;
-        height: 70px;
+        height: 30px;
     }
 
     #menuButtonsSection{
         display: none;
         width: 100%;
-        
         overflow: auto;
         background-color: hsla(213, 61%, 7%, 0.9);
         backdrop-filter: blur(5px);
@@ -63,9 +62,6 @@
         width: 80px;
     }
 
-    .footerText{
-        font-size: 0.49rem;
-    }
 
     .portfolioItemImage{
         height: 160px;
